--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
 node_modules
 bower_components
+
+# assets
+img/
+
+# dependencies
+node_modules
+
+# testing
+coverage
+
+# production
+build
+build
+
+# misc
+.DS_Store
+.env
+.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# logs 
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
